--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;700&display=swap" rel="stylesheet" />
 
-	<title>Pixema</title>
+	<title>cinema-hub</title>
 </head>
 
 <body>
